force-app/main/default/objects/Collection_Case__c/Collection_Case__c.object-meta.xml
<CustomObject>
    <description>Tracks overdue loan accounts requiring collections follow-up. Created by CollectionsBatch daily. Contains DPD bucket, assignment, and contact history for the collections team.</description>
    <label>Collection Case</label>
    <nameField>
        <displayFormat>COLL-{YYYY}-{000000}</displayFormat>
        <label>Collection Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>