force-app/main/default/objects/Collection_Case__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Collection Assignments</relationshipLabel>
    <relationshipName>Collection_Assignments</relationshipName>
</CustomField>