force-app/main/default/objects/Collection_Case__c/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <label>DPD Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1-30 DPD</fullName><default>false</default><label>1-30 DPD</label></value>
            <value><fullName>31-60 DPD</fullName><default>false</default><label>31-60 DPD</label></value>
            <value><fullName>61-90 DPD</fullName><default>false</default><label>61-90 DPD</label></value>
            <value><fullName>90+ DPD</fullName><default>false</default><label>90+ DPD (NPA Risk)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>