force-app/main/default/objects/Collection_Case__c/fields/DPD__c.field-meta.xml
<CustomField>
    <fullName>DPD__c</fullName>
    <label>Days Past Due (DPD)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Number of calendar days past the EMI due date. Calculated by CollectionsBatch daily as: TODAY() - Due_Date__c. Used for DPD bucket assignment.</description>
</CustomField>