force-app/main/default/objects/Collection_Case__c/fields/EMI_Schedule__c.field-meta.xml
<CustomField>
    <fullName>EMI_Schedule__c</fullName>
    <label>EMI Schedule</label>
    <type>Lookup</type>
    <referenceTo>EMI_Schedule__c</referenceTo>
    <relationshipLabel>Collection Cases</relationshipLabel>
    <relationshipName>Collection_Cases</relationshipName>
</CustomField>