force-app/main/default/objects/Collection_Case__c/fields/Last_Contact_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Remarks__c</fullName>
    <label>Last Contact Remarks</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>