force-app/main/default/objects/Collection_Case__c/fields/Overdue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Amount__c</fullName>
    <label>Overdue Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Total outstanding amount across all overdue EMIs for this loan account.</description>
</CustomField>