force-app/main/default/objects/Collection_Case__c/fields/Promise_To_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Promise_To_Pay_Date__c</fullName>
    <label>Promise to Pay Date</label>
    <type>Date</type>
    <description>Date committed by the customer during a collections call for repayment. Used for follow-up scheduling.</description>
</CustomField>